--- a/index.html
+++ b/index.html
@@ -66,6 +66,78 @@
     </header>
     <!-- FIXME: Header ends -->
 
+    <!-- TODO: Aside bar Starts-->
+    <aside class="aside__bar">
+      <!-- Aside bar logo -->
+      <div class="aside__bar__logo">
+        <span>guariko</span>
+      </div>
+
+      <!-- Aside bar item 1 -->
+      <div class="aside__bar__item active">
+        <div>
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <span class="aside__bar__item__information">Dashboard</span>
+      </div>
+      <!-- Aside bar item 1 ends -->
+
+      <!-- Aside bar item 2 -->
+      <div class="aside__bar__item">
+        <div>
+          <i class="fas fa-people-group"></i>
+        </div>
+        <span class="aside__bar__item__information">Customers</span>
+      </div>
+      <!-- Aside bar item  2 ends -->
+
+      <!-- Aside bar item 3 -->
+      <div class="aside__bar__item">
+        <div>
+          <i class="fas fa-list-check"></i>
+        </div>
+        <span class="aside__bar__item__information">Projects</span>
+      </div>
+      <!-- Aside bar item 3 ends -->
+
+      <!-- Aside bar item 4 -->
+      <div class="aside__bar__item">
+        <div>
+          <i class="fas fa-bag-shopping"></i>
+        </div>
+        <span class="aside__bar__item__information">Orders</span>
+      </div>
+      <!-- Aside bar item 4 ends -->
+
+      <!-- Aside bar item 5 -->
+      <div class="aside__bar__item">
+        <div>
+          <i class="fas fa-boxes-stacked"></i>
+        </div>
+        <span class="aside__bar__item__information">Inventory</span>
+      </div>
+      <!-- Aside bar item 5 ends -->
+
+      <!-- Aside bar item 6 -->
+      <div class="aside__bar__item">
+        <div>
+          <i class="fas fa-circle-user"></i>
+        </div>
+        <span class="aside__bar__item__information">Accounts</span>
+      </div>
+      <!-- Aside bar item 6 ends -->
+
+      <!-- Aside bar item 7 -->
+      <div class="aside__bar__item">
+        <div>
+          <i class="fas fa-list-check"></i>
+        </div>
+        <span class="aside__bar__item__information">Tasks</span>
+      </div>
+      <!-- Aside bar item 7 ends -->
+    </aside>
+    <!-- FIXME: Aside bar ends -->
+
     <script src="index.js"></script>
   </body>
 </html>
