Dashboard options complete

--- a/index.html
+++ b/index.html
@@ -66,6 +66,84 @@
     </header>
     <!-- FIXME: Header ends -->
 
+    <!-- TODO: Main starts -->
+    <main class="main">
+      <!-- Dashboard section -->
+      <section class="dashboard">
+        <!-- Options -->
+        <section class="options">
+          <!-- Option 1 -->
+          <div class="option">
+            <!-- Option content -->
+            <div class="option__content">
+              <span>60</span>
+              <h2>Customers</h2>
+            </div>
+            <!-- Option content ends -->
+
+            <!-- Option icon -->
+            <div class="option__icon">
+              <i class="fas fa-people-group"></i>
+            </div>
+            <!-- Option icon ends -->
+          </div>
+          <!-- Option 1 ends -->
+
+          <!-- Option 2 -->
+          <div class="option">
+            <!-- Option content -->
+            <div class="option__content">
+              <span>30</span>
+              <h2>Projects</h2>
+            </div>
+            <!-- Option content ends -->
+
+            <!-- Option icon -->
+            <div class="option__icon">
+              <i class="fas fa-list-check"></i>
+            </div>
+            <!-- Option icon ends -->
+          </div>
+          <!-- Option 2 ends -->
+
+          <!-- Option 3 -->
+          <div class="option">
+            <!-- Option content -->
+            <div class="option__content">
+              <span>200</span>
+              <h2>Orders</h2>
+            </div>
+            <!-- Option content ends -->
+
+            <!-- Option icon -->
+            <div class="option__icon">
+              <i class="fas fa-bag-shopping"></i>
+            </div>
+            <!-- Option icon ends -->
+          </div>
+          <!-- Option 3 ends -->
+
+          <!-- Option 4 -->
+          <div class="option">
+            <!-- Option content -->
+            <div class="option__content">
+              <span>$12k</span>
+              <h2>Income</h2>
+            </div>
+            <!-- Option content ends -->
+
+            <!-- Option icon -->
+            <div class="option__icon">
+              <i class="fas fa-sack-dollar"></i>
+            </div>
+            <!-- Option icon ends -->
+          </div>
+          <!-- Option 4 ends -->
+        </section>
+        <!-- Options end -->
+      </section>
+    </main>
+
     <!-- TODO: Aside bar Starts-->
     <aside class="aside__bar">
       <!-- Aside bar logo -->
