--- a/index.html
+++ b/index.html
@@ -141,6 +141,109 @@
           <!-- Option 4 ends -->
         </section>
         <!-- Options end -->
+
+        <!-- Table data section -->
+        <section class="table__content">
+          <!-- Table data introduction -->
+          <div class="table__content__introduction">
+            <h2>Recent Projects</h2>
+            <span class="button"
+              >See all <i class="fas fa-arrow-right"></i
+            ></span>
+          </div>
+          <!-- Table data introduction ends -->
+
+          <!-- Table -->
+          <table class="table">
+            <!-- Table header -->
+            <thead class="table__header">
+              <tr class="table__row">
+                <th class="table__head">project title</th>
+                <th class="table__head">department</th>
+                <th class="table__head">status</th>
+              </tr>
+            </thead>
+            <!-- Table header -->
+
+            <!-- Table body -->
+            <tbody class="table__body">
+              <!-- Row 1 -->
+              <tr class="table__row">
+                <td class="table__data__cell">UI/UX Design</td>
+                <td class="table__data__cell">UI Team</td>
+                <td class="table__data__cell">
+                  <div class="table__status">
+                    <span class="review"></span> Review
+                  </div>
+                </td>
+              </tr>
+              <!-- Row 1 ends -->
+
+              <!-- Row 2 -->
+              <tr class="table__row">
+                <td class="table__data__cell">Web Development</td>
+                <td class="table__data__cell">Front-End</td>
+                <td class="table__data__cell">
+                  <div class="table__status">
+                    <span class="progress"></span> In Progress
+                  </div>
+                </td>
+              </tr>
+              <!-- Row 2 ends -->
+
+              <!-- Row 3 -->
+              <tr class="table__row">
+                <td class="table__data__cell">Shop App</td>
+                <td class="table__data__cell">Mobile Team</td>
+                <td class="table__data__cell">
+                  <div class="table__status">
+                    <span class="pending"></span> Pending
+                  </div>
+                </td>
+              </tr>
+              <!-- Row 3 ends -->
+
+              <!-- Row 4 -->
+              <tr class="table__row">
+                <td class="table__data__cell">UI/UX Design</td>
+                <td class="table__data__cell">UI Team</td>
+                <td class="table__data__cell">
+                  <div class="table__status">
+                    <span class="review"></span> Review
+                  </div>
+                </td>
+              </tr>
+              <!-- Row 4 ends -->
+
+              <!-- Row 5 -->
+              <tr class="table__row">
+                <td class="table__data__cell">Web Development</td>
+                <td class="table__data__cell">Front-End</td>
+                <td class="table__data__cell">
+                  <div class="table__status">
+                    <span class="progress"></span> In Progress
+                  </div>
+                </td>
+              </tr>
+              <!-- Row 5 ends -->
+
+              <!-- Row 6 -->
+              <tr class="table__row">
+                <td class="table__data__cell">Shop App</td>
+                <td class="table__data__cell">Mobile Team</td>
+                <td class="table__data__cell">
+                  <div class="table__status">
+                    <span class="pending"></span> Pending
+                  </div>
+                </td>
+              </tr>
+              <!-- Row 6 ends -->
+            </tbody>
+            <!-- Table body ends -->
+          </table>
+          <!-- Table ends -->
+        </section>
+        <!-- Table data section ends -->
       </section>
     </main>
 
