--- a/index.html
+++ b/index.html
@@ -142,110 +142,269 @@
         </section>
         <!-- Options end -->
 
-        <!-- Table data section -->
-        <section class="table__content">
-          <!-- Table data introduction -->
-          <div class="table__content__introduction">
-            <h2>Recent Projects</h2>
-            <span class="button"
-              >See all <i class="fas fa-arrow-right"></i
-            ></span>
-          </div>
-          <!-- Table data introduction ends -->
+        <!-- Table and customers -->
+        <section class="table--and--customers">
+          <!-- Table data section -->
+          <section class="table__content">
+            <!-- Table data introduction -->
+            <div class="table__content__introduction">
+              <h2>Recent Projects</h2>
+              <span class="button"
+                >See all <i class="fas fa-arrow-right"></i
+              ></span>
+            </div>
+            <!-- Table data introduction ends -->
 
-          <!-- Table -->
-          <table class="table">
-            <!-- Table header -->
-            <thead class="table__header">
-              <tr class="table__row">
-                <th class="table__head">project title</th>
-                <th class="table__head">department</th>
-                <th class="table__head">status</th>
-              </tr>
-            </thead>
-            <!-- Table header -->
+            <!-- Table -->
+            <table class="table">
+              <!-- Table header -->
+              <thead class="table__header">
+                <tr class="table__row">
+                  <th class="table__head">project title</th>
+                  <th class="table__head">department</th>
+                  <th class="table__head">status</th>
+                </tr>
+              </thead>
+              <!-- Table header -->
 
-            <!-- Table body -->
-            <tbody class="table__body">
-              <!-- Row 1 -->
-              <tr class="table__row">
-                <td class="table__data__cell">UI/UX Design</td>
-                <td class="table__data__cell">UI Team</td>
-                <td class="table__data__cell">
-                  <div class="table__status">
-                    <span class="review"></span> Review
+              <!-- Table body -->
+              <tbody class="table__body">
+                <!-- Row 1 -->
+                <tr class="table__row">
+                  <td class="table__data__cell">UI/UX Design</td>
+                  <td class="table__data__cell">UI Team</td>
+                  <td class="table__data__cell">
+                    <div class="table__status">
+                      <span class="review"></span> Review
+                    </div>
+                  </td>
+                </tr>
+                <!-- Row 1 ends -->
+
+                <!-- Row 2 -->
+                <tr class="table__row">
+                  <td class="table__data__cell">Web Development</td>
+                  <td class="table__data__cell">Front-End</td>
+                  <td class="table__data__cell">
+                    <div class="table__status">
+                      <span class="progress"></span> In Progress
+                    </div>
+                  </td>
+                </tr>
+                <!-- Row 2 ends -->
+
+                <!-- Row 3 -->
+                <tr class="table__row">
+                  <td class="table__data__cell">Shop App</td>
+                  <td class="table__data__cell">Mobile Team</td>
+                  <td class="table__data__cell">
+                    <div class="table__status">
+                      <span class="pending"></span> Pending
+                    </div>
+                  </td>
+                </tr>
+                <!-- Row 3 ends -->
+
+                <!-- Row 4 -->
+                <tr class="table__row">
+                  <td class="table__data__cell">UI/UX Design</td>
+                  <td class="table__data__cell">UI Team</td>
+                  <td class="table__data__cell">
+                    <div class="table__status">
+                      <span class="review"></span> Review
+                    </div>
+                  </td>
+                </tr>
+                <!-- Row 4 ends -->
+
+                <!-- Row 5 -->
+                <tr class="table__row">
+                  <td class="table__data__cell">Web Development</td>
+                  <td class="table__data__cell">Front-End</td>
+                  <td class="table__data__cell">
+                    <div class="table__status">
+                      <span class="progress"></span> In Progress
+                    </div>
+                  </td>
+                </tr>
+                <!-- Row 5 ends -->
+
+                <!-- Row 6 -->
+                <tr class="table__row">
+                  <td class="table__data__cell">Shop App</td>
+                  <td class="table__data__cell">Mobile Team</td>
+                  <td class="table__data__cell">
+                    <div class="table__status">
+                      <span class="pending"></span> Pending
+                    </div>
+                  </td>
+                </tr>
+                <!-- Row 6 ends -->
+              </tbody>
+              <!-- Table body ends -->
+            </table>
+            <!-- Table ends -->
+          </section>
+          <!-- Table data section ends -->
+
+          <!-- New customers container -->
+          <section class="new--customers--section">
+            <div class="new--customers--container">
+              <!-- New customers introduction -->
+              <div class="new__customers__introduction">
+                <h2>New customers</h2>
+                <span class="button"
+                  >See all <i class="fas fa-arrow-right"></i
+                ></span>
+              </div>
+              <!-- New customers introduction ends -->
+
+              <!-- New customers  -->
+              <div class="new__customers">
+                <!-- Customer 1 -->
+                <div class="customer">
+                  <!-- Customer image -->
+                  <div class="customer__image">
+                    <img src="images/pic-2.png" alt="" />
                   </div>
-                </td>
-              </tr>
-              <!-- Row 1 ends -->
+                  <!-- Customer image -->
 
-              <!-- Row 2 -->
-              <tr class="table__row">
-                <td class="table__data__cell">Web Development</td>
-                <td class="table__data__cell">Front-End</td>
-                <td class="table__data__cell">
-                  <div class="table__status">
-                    <span class="progress"></span> In Progress
+                  <!-- Customer content -->
+                  <div class="customer__content">
+                    <h3>Charlotte Emma</h3>
+                    <span>CEO</span>
                   </div>
-                </td>
-              </tr>
-              <!-- Row 2 ends -->
+                  <!-- Customer content ends -->
 
-              <!-- Row 3 -->
-              <tr class="table__row">
-                <td class="table__data__cell">Shop App</td>
-                <td class="table__data__cell">Mobile Team</td>
-                <td class="table__data__cell">
-                  <div class="table__status">
-                    <span class="pending"></span> Pending
-                  </div>
-                </td>
-              </tr>
-              <!-- Row 3 ends -->
+                  <!-- Customer status -->
+                  <div class="customer__status">
+                    <i class="fas fa-circle-user"></i>
 
-              <!-- Row 4 -->
-              <tr class="table__row">
-                <td class="table__data__cell">UI/UX Design</td>
-                <td class="table__data__cell">UI Team</td>
-                <td class="table__data__cell">
-                  <div class="table__status">
-                    <span class="review"></span> Review
-                  </div>
-                </td>
-              </tr>
-              <!-- Row 4 ends -->
+                    <i class="fas fa-message"></i>
 
-              <!-- Row 5 -->
-              <tr class="table__row">
-                <td class="table__data__cell">Web Development</td>
-                <td class="table__data__cell">Front-End</td>
-                <td class="table__data__cell">
-                  <div class="table__status">
-                    <span class="progress"></span> In Progress
+                    <i class="fas fa-phone"></i>
                   </div>
-                </td>
-              </tr>
-              <!-- Row 5 ends -->
+                  <!-- Customer status -->
+                </div>
+                <!-- Customer 1 ends -->
 
-              <!-- Row 6 -->
-              <tr class="table__row">
-                <td class="table__data__cell">Shop App</td>
-                <td class="table__data__cell">Mobile Team</td>
-                <td class="table__data__cell">
-                  <div class="table__status">
-                    <span class="pending"></span> Pending
+                <!-- Customer 2 -->
+                <div class="customer">
+                  <!-- Customer image -->
+                  <div class="customer__image">
+                    <img src="images/pic-2.png" alt="" />
                   </div>
-                </td>
-              </tr>
-              <!-- Row 6 ends -->
-            </tbody>
-            <!-- Table body ends -->
-          </table>
-          <!-- Table ends -->
+                  <!-- Customer image -->
+
+                  <!-- Customer content -->
+                  <div class="customer__content">
+                    <h3>Charlotte Emma</h3>
+                    <span>CEO</span>
+                  </div>
+                  <!-- Customer content ends -->
+
+                  <!-- Customer status -->
+                  <div class="customer__status">
+                    <i class="fas fa-circle-user"></i>
+
+                    <i class="fas fa-message"></i>
+
+                    <i class="fas fa-phone"></i>
+                  </div>
+                  <!-- Customer status -->
+                </div>
+                <!-- Customer 2 ends -->
+
+                <!-- Customer 3 -->
+                <div class="customer">
+                  <!-- Customer image -->
+                  <div class="customer__image">
+                    <img src="images/pic-2.png" alt="" />
+                  </div>
+                  <!-- Customer image -->
+
+                  <!-- Customer content -->
+                  <div class="customer__content">
+                    <h3>Charlotte Emma</h3>
+                    <span>CEO</span>
+                  </div>
+                  <!-- Customer content ends -->
+
+                  <!-- Customer status -->
+                  <div class="customer__status">
+                    <i class="fas fa-circle-user"></i>
+
+                    <i class="fas fa-message"></i>
+
+                    <i class="fas fa-phone"></i>
+                  </div>
+                  <!-- Customer status -->
+                </div>
+                <!-- Customer 3 ends -->
+
+                <!-- Customer 4 -->
+                <div class="customer">
+                  <!-- Customer image -->
+                  <div class="customer__image">
+                    <img src="images/pic-2.png" alt="" />
+                  </div>
+                  <!-- Customer image -->
+
+                  <!-- Customer content -->
+                  <div class="customer__content">
+                    <h3>Charlotte Emma</h3>
+                    <span>CEO</span>
+                  </div>
+                  <!-- Customer content ends -->
+
+                  <!-- Customer status -->
+                  <div class="customer__status">
+                    <i class="fas fa-circle-user"></i>
+
+                    <i class="fas fa-message"></i>
+
+                    <i class="fas fa-phone"></i>
+                  </div>
+                  <!-- Customer status -->
+                </div>
+                <!-- Customer 4 ends -->
+
+                <!-- Customer 5 -->
+                <div class="customer">
+                  <!-- Customer image -->
+                  <div class="customer__image">
+                    <img src="images/pic-2.png" alt="" />
+                  </div>
+                  <!-- Customer image -->
+
+                  <!-- Customer content -->
+                  <div class="customer__content">
+                    <h3>Charlotte Emma</h3>
+                    <span>CEO</span>
+                  </div>
+                  <!-- Customer content ends -->
+
+                  <!-- Customer status -->
+                  <div class="customer__status">
+                    <i class="fas fa-circle-user"></i>
+
+                    <i class="fas fa-message"></i>
+
+                    <i class="fas fa-phone"></i>
+                  </div>
+                  <!-- Customer status -->
+                </div>
+                <!-- Customer 5 ends -->
+              </div>
+            </div>
+          </section>
+          <!-- New customers container ends -->
         </section>
-        <!-- Table data section ends -->
+        <!-- Table and customers end -->
       </section>
+      <!-- Dashboard section ends -->
     </main>
+    <!-- FIXME: Main ends -->
 
     <!-- TODO: Aside bar Starts-->
     <aside class="aside__bar">
@@ -253,6 +412,7 @@
       <div class="aside__bar__logo">
         <span>guariko</span>
       </div>
+      <!-- Aside bar logo ends -->
 
       <!-- Aside bar item 1 -->
       <div class="aside__bar__item active">
